--- a/gradebook/app/ui/src/bundle/org/sakaiproject/tool/gradebook/bundle/Messages.properties
+++ b/gradebook/app/ui/src/bundle/org/sakaiproject/tool/gradebook/bundle/Messages.properties
@@ -23,6 +23,10 @@
 #
 #
 
+# test values
+show_graph_button=Show Graph 1
+show_graph_button_2=Show Graph 2
+
 # Application-wide labels.
 course_grade_name=Course Grade
 course_points_name=Course Points
@@ -40,8 +44,8 @@ appmenu_import_all=Import Grades
 appmenu_course_grades=Course Grades
 
 breadcrumb_overview=Gradebook Items
-breadcrumb_roster=All Grades 
-breadcrumb_edit=Edit: 
+breadcrumb_roster=All Grades
+breadcrumb_edit=Edit:
 breadcrumb_add=Add Gradebook Item(s)
 breadcrumb_courseGrade=Course Grade
 breadcrumb_spreadsheet=Import Gradebook Item
@@ -53,7 +57,7 @@ search_sections_filter=View
 search_sections_all=All Sections/Groups
 search_sections_search= Search for student
 search_categories_filter=and
-search_categories_filter2 = category 
+search_categories_filter2 = category
 search_categories_all=All Categories
 
 paging_status_students=Viewing {0} to {1} of {2} students
@@ -103,7 +107,7 @@ overview_avg_display_percent= {0}%
 overview_avg_cum_score=Avg. Cumulative Score
 overview_avg_course_grade = Avg. Course Grade
 overview_edit=Edit
-overview_weight=Weight 
+overview_weight=Weight
 overview_included_in_cum=Included in Course Grade
 overview_grade_editor=Grade Editor
 overview_included_in_cum_true=Yes
@@ -113,13 +117,13 @@ overview_legend_title=Legend:
 overview_footnote_symbol1=*
 overview_footnote_symbol2=**
 overview_footnote_symbol3=***
-overview_footnote_legend1=Titles shown in grey are not released to students. 
+overview_footnote_legend1=Titles shown in grey are not released to students.
 overview_footnote_legend2=Class averages in parentheses () are not included in the course grade calculations.
 overview_footnote_legend3=These items must be graded from the tool listed and may not be graded from the gradebook.
 overview_from=from
-overview_lettergrade1=We noticed that you are using letter grades in the gradebook and want to make sure that you are aware of the 
+overview_lettergrade1=We noticed that you are using letter grades in the gradebook and want to make sure that you are aware of the
 overview_lettergrade2=explicit approach that Oncourse uses when handling letter grades.
-overview_lettergrade3=Instructors may have a range of differing approaches for tabulating scores across letter grades.  If these assumptions do not match your intent, please contact your 
+overview_lettergrade3=Instructors may have a range of differing approaches for tabulating scores across letter grades.  If these assumptions do not match your intent, please contact your
 overview_lettergrade4=Campus Teaching Center
 overview_lettergrade5=for assistance.
 overview_save_current_sort=Save current order as sorting order
@@ -192,7 +196,7 @@ course_grade_details_log=Log
 course_grade_details_log_type=Grade
 course_grade_details_log_title=Grade Log: {0}
 course_grade_details_calculate_course_grade=Set Ungraded Items to Zero
-course_grade_details_null_msg=Currently, the gradebook does not include gradebook items that have not been graded in the course grade calculation. This could result in a higher course grade for a student. To include a gradebook item in the course grade calculation, you must enter a grade of zero or higher.  If you want to enter zeroes for any gradebook item that has not been graded and then re-calculate the course grade, 
+course_grade_details_null_msg=Currently, the gradebook does not include gradebook items that have not been graded in the course grade calculation. This could result in a higher course grade for a student. To include a gradebook item in the course grade calculation, you must enter a grade of zero or higher.  If you want to enter zeroes for any gradebook item that has not been graded and then re-calculate the course grade,
 course_grade_details_null_msg_ta_view=Currently, the gradebook does not include gradebook items that have not been graded in the course grade calculation. This could result in a higher course grade for a student. To include a gradebook item in the course grade calculation, you must enter a grade of zero or higher.
 course_grade_details_grade_display={0} ({1}%)
 course_grade_details_export_label=Export grades as
@@ -270,9 +274,9 @@ add_assignment_save=Gradebook item {0} has been added.
 add_assignment_counted=Include this item in course grade calculations
 add_assignment_counted_detail=Grade will be visible to students.
 add_assignment_released=Release this item to Students
-add_assignment_released_conditional=This item will not be visible to students until you have chosen to 'Display released gradebook items to students' in Gradebook Setup. 
+add_assignment_released_conditional=This item will not be visible to students until you have chosen to 'Display released gradebook items to students' in Gradebook Setup.
 add_assignment_category=Category
-add_assignment_category_info=Items not assigned to a category will not be counted toward the course grade calculation. 
+add_assignment_category_info=Items not assigned to a category will not be counted toward the course grade calculation.
 add_assignment_selector1=Add
 add_assignment_selector2=More Gradebook Items
 add_assignment_no_title=Please enter a value.
@@ -336,10 +340,10 @@ feedback_options_require_positive=Please enter positive percentage values
 feedback_options_require_descending_order=Please enter percentage values in descending order
 feedback_options_locking_failure=Someone else made changes to these settings while you were working.
 feedback_options_illegal_change=You have manually entered course grades of the grade type "{0}". To change the course grade type, you must first undo all manually overwritten course grades.
-feedback_options_cannot_change_percentage1=Alert: Due to problems with this gradebook configuration your changes have not been saved. Please contact your 
+feedback_options_cannot_change_percentage1=Alert: Due to problems with this gradebook configuration your changes have not been saved. Please contact your
 feedback_options_cannot_change_percentage2=Campus Teaching Center
 feedback_options_cannot_change_percentage3=for further assistance.
-feedback_options_existing_conflict1=Alert: This gradebook has conflicting settings for the letter grade and course grade scales. Please contact your 
+feedback_options_existing_conflict1=Alert: This gradebook has conflicting settings for the letter grade and course grade scales. Please contact your
 feedback_options_existing_conflict2=Campus Teaching Center
 feedback_options_existing_conflict3=for further assistance.
 
@@ -363,7 +367,7 @@ student_view_return_to_inst_view=Return to Instructor''s View of Grades for {0}
 student_view_legend_title=Legend:
 student_view_footnote_symbol1=*
 student_view_footnote_symbol2=**
-student_view_footnote_legend1=Grades in parentheses () are not included in the course grade calculation. 
+student_view_footnote_legend1=Grades in parentheses () are not included in the course grade calculation.
 student_view_footnote_legend2="Course Points" does not include weighting or other grading factors at the discretion of the instructor(s). Please refer to your syllabus or instructor(s).
 
 inst_view_page_title=Grades for {0}
@@ -394,8 +398,8 @@ inst_view_comments=Comments
 inst_view_legend_title=Legend:
 inst_view_footnote_symbol1=*
 inst_view_footnote_symbol2=**
-inst_view_footnote_legend1=Titles shown in grey are not released to students. 
-inst_view_footnote_legend2=Grades in parentheses () are not included in the course grade calculation. 
+inst_view_footnote_legend1=Titles shown in grey are not released to students.
+inst_view_footnote_legend2=Grades in parentheses () are not included in the course grade calculation.
 inst_view_scores_saved=New scores saved
 inst_view_scores_saved_excessive=New scores saved. One or more saved scores exceeded the total point value of the gradebook item.
 inst_view_not_counted_open=(
@@ -533,13 +537,13 @@ import_entire_single_bad_ids_alert_end=To continue, you must first add this part
 import_entire_bad_ids_alert_end=To continue, you must first add these participants to the site or remove these participants from the file.
 import_entire_success=Your spreadsheet has imported successfully
 import_entire_no_changes=There was no difference found between the imported scores and the current gradebook so no changes made.
-import_entire_some_success=Some gradebook items were imported successfully. See below for the errors that did occur.  
+import_entire_some_success=Some gradebook items were imported successfully. See below for the errors that did occur.
 import_assignment_entire_notsupported=At least one gradebook item in your upload has a non-numeric score. This gradebook is not currently set up to accept non-numeric scores.
 import_assignment_entire_negative_score=At least one gradebook item in your upload contains a score less than 0. Scores must be greater than or equal to 0.
 import_assignment_pointsPossibleNotSupported=At least one gradebook item in your upload contains a non-numeric value for points possible. Points possible must be a numeric value.
 import_assignment_pointsPossibleNegative=At least one gradebook item in your upload contains an invalid value for points possible. Points possible must be greater than 0.
 import_assignment_pointsPossibleNull=At least one gradebook item in your upload is missing a value for points possible.  Each gradebook item must have a value for points possible.
-import_assignment_entire_pointsPossibleChanged=The points possible value on at least one gradebook item was updated during import. Pre-existing scores were not adjusted for the change. 
+import_assignment_entire_pointsPossibleChanged=The points possible value on at least one gradebook item was updated during import. Pre-existing scores were not adjusted for the change.
 import_assignment_entire_missing_title=At least one gradebook item in your upload has a blank title. Please ensure there are no blank titles for your gradebook items.
 import_assignment_externally_maintained_grades=The grades for imported item {0} were not updated. Please go to {1} to grade this item.
 import_assignment_externally_maintained_settings=The settings for imported item {0} were not updated. Please go to {1} to edit the item settings.
@@ -557,7 +561,7 @@ import_verify_inst2=Below is a display of the contents of your spreadsheet. If i
 import_verify_ok=OK
 import_verify_back=Back
 import_verify_success=Your spreadsheet has imported successfully.
-import_verify_assignment_no_exists=The following new gradebook items in the spreadsheet you are attempting to import has a missing or invalid points possible value:  
+import_verify_assignment_no_exists=The following new gradebook items in the spreadsheet you are attempting to import has a missing or invalid points possible value:
 import_verify_assignment_no_exists_bottom=To correct, in the spreadsheet template after the assignment title add a space and the points possible in square ([]) brakets (ex: assign 1 [100]) and try again.
 
 #message for removing sreadsheets
@@ -576,7 +580,7 @@ remove_spreadsheet_locking_failure=Someone else made changes to this gradebook i
 
 gb_setup_title = Gradebook Setup
 grade_entry_heading = Grade Entry
-grade_entry_info = How will graders enter grades into this gradebook? 
+grade_entry_info = How will graders enter grades into this gradebook?
 entry_opt_points = Points
 entry_opt_percent = Percentages
 entry_opt_letters = Letter Grades
@@ -584,7 +588,7 @@ grade_entry_scale = Grade Entry Scale
 grade_scale_grade = Grade
 grade_entry_invalid = Please select a grade entry method.
 display_released_items = Display released Gradebook Items to students
-display_released_items_info = You can release a gradebook item when creating or editing the gradebook item. 
+display_released_items_info = You can release a gradebook item when creating or editing the gradebook item.
 gb_setup_save = Save Changes
 gb_setup_cancel = Cancel
 gb_save_msg = Your changes have been saved.
@@ -635,12 +639,12 @@ cat_itemvalues_must_be_equal = Item values must be equal to drop or keep scores.
 cat_external_value_warning=Item value will change in order to support the drop highest, drop lowest, or keep highest setting.
 cat_items = item(s)
 running_total = Running Total
-needed_total = Needed Total 
+needed_total = Needed Total
 cat_weight_total_not_100 = The input category weights do not total 100%.
 cat_unassigned = Unassigned
 cat_weight_display = ({0}%)
 cat_same_name_error = You may not have multiple categories with the same name.
-cat_missing_weight = You must enter a weight for each category. To exclude a category from the course grade, use 0% for the weight.  
+cat_missing_weight = You must enter a weight for each category. To exclude a category from the course grade, use 0% for the weight.
 cat_locking_failure = Someone else made changes to the categories while you were working.
 cat_expanded = Expanded
 cat_collapsed = Collapsed
@@ -668,7 +672,7 @@ grader_rules_invalid_grader=The selected grader is invalid.
 grader_rules_select_a_grader=Select a grader to edit:
 grader_rules_select_menu_none=Select...
 grader_rules_remove_rule=Remove Rule
-grader_rules_no_rules=There are currently no rules defined for this grader. 
+grader_rules_no_rules=There are currently no rules defined for this grader.
 grader_rules_no_grader_selected=There is no grader selected.
 grader_rules_no_changes=There were no changes to the selected grader's permission settings.
 grader_rules_invalid_category=The selected category is invalid.
@@ -680,7 +684,7 @@ grader_rules_cancel=Clear Changes
 org.sakaiproject.gradebook.tool.jsf.AssignmentGradeValidator.IQUIZ_PRECISION=For 'Original Test and Survey' associated assignments, please enter a number with five or fewer digits including the decimal.
 ## END IQUIZ INTEGRATION
 
-# Oncourse SIS export 
+# Oncourse SIS export
 course_grade_details_export_sis=Export for SIS
 export_grade_for_sis_prefix=course_grade_sis
 
@@ -692,7 +696,7 @@ hide_show_openLink=Hide/Show Columns
 
 #Custom export fields
 userid=Student ID
-usereid=Student ID 
+usereid=Student ID
 useremail= Student Email
 username= Student Name
 sortname= Student Name
