vm is dying, pushing up

--- a/gradebook/app/ui/src/bundle/org/sakaiproject/tool/gradebook/bundle/Messages.properties
+++ b/gradebook/app/ui/src/bundle/org/sakaiproject/tool/gradebook/bundle/Messages.properties
@@ -26,6 +26,7 @@
 # test values
 show_graph_button=Show Graph 1
 show_graph_button_2=Show Graph 2
+show_graphs=Show Graphs
 
 # Application-wide labels.
 course_grade_name=Course Grade
