Made buttons return, fixed graphs displaying incorrectly, moved button out from under comments section

--- a/gradebook/app/ui/src/bundle/org/sakaiproject/tool/gradebook/bundle/Messages.properties
+++ b/gradebook/app/ui/src/bundle/org/sakaiproject/tool/gradebook/bundle/Messages.properties
@@ -406,7 +406,7 @@ inst_view_return_to=Return to {0}
 
 # Graph Messages for Student View
 show_graphs=Show Graphs
-show_assignment_average_grade=The average grade for the current assignment is 
+show_assignment_average_grade=The average grade for the current assignment is
 show_assignment_high_grade=The highest grade for the current assignment is
 show_assignment_low_grade=The lowest grade for the current assignment is
 
@@ -695,6 +695,9 @@ hide_show_information=Hiding a column will not affect grade calculations and wil
 hide_show_hide=Hide
 hide_show_assignment=Title
 hide_show_openLink=Hide/Show Columns
+
+# graph js
+show_graph=Show Graphs
 
 #Custom export fields
 userid=Student ID
